tests/compile/activation_param_field_name_mismatch.stderr
error[E0609]: no field `nonexistent` on type `TestRequest`
  --> tests/compile/activation_param_field_name_mismatch.rs:21:29
   |
21 |         #[activation_param] nonexistent: String,
   |                             ^^^^^^^^^^^ unknown field
   |
   = note: available field is: `auth_token`

warning: unused variable: `nonexistent`
  --> tests/compile/activation_param_field_name_mismatch.rs:21:29
   |
21 |         #[activation_param] nonexistent: String,
   |                             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_nonexistent`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
